# em-test

./: .gitignore  AGENT.md  AGENTS.md  CITATION.cff  LICENSE  README.md  checklist.md  citation.cff  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: tests.yml
.junie/instructions/: data.md  domain.md  validation.md
data/: fake_emdat_test.xlsx
emtest/: __init__.py  custom_checks.py  utils.py  validation_schemas.py
emtest/validation_data/: areas.py  classification.py  classification_tree.toml  data_loader.py  gaul_adm1_code.txt  gaul_adm2_code.txt  magnitude.py
examples/: example_notebook.ipynb  validation_script.py
instructions/: data.md  domain.md  validation.md
tests/: conftest.py  test_custom_checks.py  test_validation.py
