[build-system]
requires = [
  "setuptools>=68",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "emtest"
version = "2026.05.0"
description = "Data validation for EM-DAT datasets."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9,<4"
license = { file = "LICENSE" }
authors = [
  { name = "Damien Delforge", email = "damien.delforge@uclouvain.be" },
  { name = "Valentin Wathelet" }
]
keywords = ["EM-DAT", "data validation", "disaster database"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pandera>=0.21",
  "pandas>=2.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "toml>=0.10",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "ipython",
  "pandas-stubs",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/em-dat/em-test"
Repository = "https://github.com/em-dat/em-test"

[tool.setuptools.packages.find]
exclude = ["tests", "examples"]

[tool.setuptools.package-data]
emtest = [
  "validation_data/*.csv",
  "validation_data/*.toml",
  "validation_data/*.txt",
]
